--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@ html, body {
 <script src="touchtomouse.js"></script>
 </head>
 <body>
-  <input type="text" placeholder="Server Address" id="dom_address" value="ws://18.111.59.164:1453/">
+  <input type="text" placeholder="Server Address" id="dom_address" value="wss://zipzipzip.herokuapp.com/">
   <input type="submit" value="Start Game" onclick="startGame()" id="dom_start">
   <canvas id="canvas" style="display:none;"></canvas>
 <script>
