--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,13 @@ html, body {
 <script src="touchtomouse.js"></script>
 </head>
 <body>
-  <input type="text" placeholder="Server Address" id="dom_address" value="wss://zipzipzip.herokuapp.com/">
   <input type="submit" value="Start Game" onclick="startGame()" id="dom_start">
   <canvas id="canvas" style="display:none;"></canvas>
 <script>
 singleTouchToMouse(canvas, true);
+
+var HOST = location.origin.replace(/^http/, 'ws');
+
 var ctx = canvas.getContext("2d");
 var socket = null;
 var lastMessage;
@@ -26,7 +28,7 @@ var game = {
 };
 
 function startGame() {
-  initConnection(dom_address.value);
+  initConnection(HOST);
   dom_address.style.display = "none";
   dom_start.style.display = "none";
   canvas.style.display = "";
