--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@ html, body {
   margin: 0px;
 }
 </style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="touchtomouse.js"></script>
 </head>
 <body>
