--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@ html, body {
 <script src="touchtomouse.js"></script>
 </head>
 <body>
-  <canvas id="canvas" style="z-index: 0"></canvas>
+  <canvas id="canvas" style="z-index: 0; position: absolute; top: 0px; left: 0px;"></canvas>
+  <div id="dom_initdiv" style="z-index: 100; margin-top: 100px; position: absolute; width: 100%;">
   <center>
-  <div id="dom_initdiv" style="z-index: 100">
   <input type="text" placeholder="Nick" id="dom_nick"><br>
   <input type="submit" value="Start Game" onclick="startGame()" id="dom_start">
-  </div>
   </center>
+  </div>
 <script>
 singleTouchToMouse(canvas, true);
 
