--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ html, body {
 </head>
 <body>
   <canvas id="canvas" style="z-index: 0; position: absolute; top: 0px; left: 0px;"></canvas>
-  <div id="dom_initdiv" style="z-index: 100; margin-top: 100px; position: absolute; width: 100%;">
+  <div id="dom_initdiv" style="z-index: 100; margin-top: 100px; position: absolute; width: 100%; height: 100%;">
   <center>
   <input type="text" placeholder="Nick" id="dom_nick"><br>
   <input type="submit" value="Start Game" onclick="startGame()" id="dom_start">
