--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@ var ctx = canvas.getContext("2d");
 var socket = null;
 
 var game = {
-  started: false,
-  myId: 0,
+  joined: false,
+  playerId: 0,
   balls: [],
   players: []
 };
@@ -115,7 +115,7 @@ function handleMessage(msg) {
 }
 
 function handleInit(msg) {
-  game.myId = msg.yourId;
+  game.playerId = msg.yourId;
   game.balls = msg.balls;
   game.players = msg.players;
 }
@@ -150,9 +150,14 @@ function sendInit(nick) {
   socket.send(JSON.stringify({
     type: "init", name: nick
   }));
+  game.joined = true;
 }
 
 function sendAction(action) {
+  if (!game.joined) {
+    return;
+  }
+
   socket.send(JSON.stringify({
     type: "action", action: action
   }));
@@ -204,27 +209,33 @@ var buttonState = {
 };
 
 canvas.ontouchstart = function (e) {
-  var x = e.target.clientX - canvas.getBoundingClientRect().left;
-  var y = e.target.clientY - canvas.getBoundingClientRect().right;
-  if (x < canvas.width / 3) {
-    sendAction("left");
-    buttonState.lastDir = e.target.identifier;
-  } else if (x < canvas.width * 2 / 3) {
-    sendAction("jump");
-  } else {
-    sendAction("right");
-    buttonState.lastDir = e.target.identifier;
+  for (var i = 0; i < e.changedTouches.length; i++) {
+    var touch = e.changedTouches[i];
+    var x = touch.clientX - canvas.getBoundingClientRect().left;
+    var y = touch.clientY - canvas.getBoundingClientRect().right;
+    if (x < canvas.width / 3) {
+      sendAction("left");
+      buttonState.lastDir = touch.identifier;
+    } else if (x < canvas.width * 2 / 3) {
+      sendAction("jump");
+    } else {
+      sendAction("right");
+      buttonState.lastDir = touch.identifier;
+    }
   }
 };
 
 canvas.ontouchend = canvas.ontouchcancel = function (e) {
-  if (e.target.identifier == buttonState.lastDir) {
-    sendAction("stop");
-    buttonState.lastDir = null;
-  }
-  if (e.target.identifier == buttonState.lastDir) {
-    sendAction("stop");
-    buttonState.lastDir = null;
+  for (var i = 0; i < e.changedTouches.length; i++) {
+    var touch = e.changedTouches[i];
+    if (touch.identifier == buttonState.lastDir) {
+      sendAction("stop");
+      buttonState.lastDir = null;
+    }
+    if (touch.identifier == buttonState.lastDir) {
+      sendAction("stop");
+      buttonState.lastDir = null;
+    }
   }
 };
 
