--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@ html, body {
   width: 5px;
   height: 5px;
 }
+canvas {
+  touch-action: none;
+}
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
