--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@ function render() {
     if (ball.player == -1) {
       ctx.fillStyle = "gray";
     } else {
-      ctx.fillStyle = ball.color;
+      ctx.fillStyle = game.players[ball.player].color;
     }
     ctx.fill();
   }
